# ganeti-rapi-client-python

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
client/: __init__.py  api_client.py  api_exeption.py  exceptions.py  utils.py
client/models/: instance.py  job.py  node.py
client/services/: instance_service.py  job_service.py  node_service.py
tests/: conftest.py  test_api_client.py
tests/services/: test_instance_service.py  test_job_service.py  test_node_service.py
tests/testdata/: v2_get_instances.json  v2_get_instances_instance.json  v2_get_nodes.json  v2_get_nodes_node.json
